@@ -16,7 +16,8 @@ Version 0.3r
  - Get fucked.
 * It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).
 * New TF items added to Rosalin:
- - Avia.
+ - Avia. Ingredients can be bought from Patchwork.
+ - Ovis. Ingredients are a bit hard to get without debug atm.
 
 
 --------------------------------------------
